test_regress/t/t_tagged_if.out
%Error-UNSUPPORTED: t/t_tagged_if.v:24:17: Unsupported: tagged union
   24 |   typedef union tagged {
      |                 ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_if.v:25:5: Unsupported: void (for tagged unions)
   25 |     void Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:30:17: Unsupported: tagged union
   30 |   typedef union tagged packed {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:31:5: Unsupported: void (for tagged unions)
   31 |     void          Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:39:17: Unsupported: tagged union
   39 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:40:5: Unsupported: void (for tagged unions)
   40 |     void        Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:46:17: Unsupported: tagged union
   46 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:50:11: Unsupported: tagged union
   50 |     union tagged {
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:60:17: Unsupported: tagged union
   60 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:61:5: Unsupported: void (for tagged unions)
   61 |     void    Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:66:17: Unsupported: tagged union
   66 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:67:5: Unsupported: void (for tagged unions)
   67 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:75:17: Unsupported: tagged union
   75 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:76:5: Unsupported: void (for tagged unions)
   76 |     void      Invalid;
      |     ^~~~
%Warning-SHORTREAL: t/t_tagged_if.v:78:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   78 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_tagged_if.v:82:17: Unsupported: tagged union
   82 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:83:5: Unsupported: void (for tagged unions)
   83 |     void   Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:88:17: Unsupported: tagged union
   88 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:89:5: Unsupported: void (for tagged unions)
   89 |     void  Invalid;
      |     ^~~~
%Error: t/t_tagged_if.v:109:9: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  109 |     v = tagged Invalid;
      |         ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_if.v:111:33: syntax error, unexpected ')', expecting '.' or tagged or .*
  111 |     if (v matches tagged Invalid)
      |                                 ^
%Error: t/t_tagged_if.v:118:9: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  118 |     v = tagged Valid (42);
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:120:32: Unsupported: '{} tagged patterns
  120 |     if (v matches tagged Valid .n)
      |                                ^
%Error-UNSUPPORTED: t/t_tagged_if.v:120:19: Unsupported: '{} tagged patterns
  120 |     if (v matches tagged Valid .n)
      |                   ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:120:11: Unsupported: matches operator
  120 |     if (v matches tagged Valid .n)
      |           ^~~~~~~
%Error: t/t_tagged_if.v:127:9: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  127 |     v = tagged Valid (100);
      |         ^~~~~~
%Error: t/t_tagged_if.v:129:33: syntax error, unexpected ')', expecting '.' or tagged or .*
  129 |     if (v matches tagged Invalid)
      |                                 ^
%Error: t/t_tagged_if.v:136:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  136 |     wt = tagged Wide60 (60'hFEDCBA987654321);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:138:34: Unsupported: '{} tagged patterns
  138 |     if (wt matches tagged Wide60 .w)
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:138:20: Unsupported: '{} tagged patterns
  138 |     if (wt matches tagged Wide60 .w)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:138:12: Unsupported: matches operator
  138 |     if (wt matches tagged Wide60 .w)
      |            ^~~~~~~
%Error: t/t_tagged_if.v:145:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  145 |     wt = tagged Wide90 (90'hDE_ADBEEFCA_FEBABE12_3456);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:147:34: Unsupported: '{} tagged patterns
  147 |     if (wt matches tagged Wide90 .w)
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:147:20: Unsupported: '{} tagged patterns
  147 |     if (wt matches tagged Wide90 .w)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:147:12: Unsupported: matches operator
  147 |     if (wt matches tagged Wide90 .w)
      |            ^~~~~~~
%Error: t/t_tagged_if.v:154:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  154 |     wt = tagged Byte8NonZeroLSB (8'hA5);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:156:43: Unsupported: '{} tagged patterns
  156 |     if (wt matches tagged Byte8NonZeroLSB .b)
      |                                           ^
%Error-UNSUPPORTED: t/t_tagged_if.v:156:20: Unsupported: '{} tagged patterns
  156 |     if (wt matches tagged Byte8NonZeroLSB .b)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:156:12: Unsupported: matches operator
  156 |     if (wt matches tagged Byte8NonZeroLSB .b)
      |            ^~~~~~~
%Error: t/t_tagged_if.v:163:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  163 |     wt = tagged Word32LittleEndian (32'hDEADBEEF);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:165:46: Unsupported: '{} tagged patterns
  165 |     if (wt matches tagged Word32LittleEndian .w)
      |                                              ^
%Error-UNSUPPORTED: t/t_tagged_if.v:165:20: Unsupported: '{} tagged patterns
  165 |     if (wt matches tagged Word32LittleEndian .w)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:165:12: Unsupported: matches operator
  165 |     if (wt matches tagged Word32LittleEndian .w)
      |            ^~~~~~~
%Error: t/t_tagged_if.v:172:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  172 |     at = tagged Arr '{10, 20, 30, 40};
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:174:31: Unsupported: '{} tagged patterns
  174 |     if (at matches tagged Arr .a)
      |                               ^
%Error-UNSUPPORTED: t/t_tagged_if.v:174:20: Unsupported: '{} tagged patterns
  174 |     if (at matches tagged Arr .a)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:174:12: Unsupported: matches operator
  174 |     if (at matches tagged Arr .a)
      |            ^~~~~~~
%Error: t/t_tagged_if.v:181:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  181 |     at = tagged Scalar (999);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:183:34: Unsupported: '{} tagged patterns
  183 |     if (at matches tagged Scalar .s)
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:183:20: Unsupported: '{} tagged patterns
  183 |     if (at matches tagged Scalar .s)
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:183:12: Unsupported: matches operator
  183 |     if (at matches tagged Scalar .s)
      |            ^~~~~~~
%Error: Exiting due to
